chore: add exsiting modules to pdm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ maintainers = [
 ]
 dependencies = [
     "rich>=13.7.0",
+    "pyyaml>=6.0.1",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
@@ -39,12 +40,19 @@ dev9 = ["pdoc3"]
 
 [tool.pdm.version]
 source = "scm"
+# write_to = "learn_toml/_version.py"
+# write_template = "__version__ = '{}'"
 
 [tool.pdm]
 package-type = "library"
 
 # https://pdm-project.org/latest/usage/scripts/
 [tool.pdm.scripts]
+toml_main = { call = "learn_toml:main" }
+toml_module = { shell = "python -m learn_toml" }
+yaml_main = { call = "learn_yaml:main" }
+yaml_module = { shell = "python -m learn_yaml" }
+
 clean_docs = { shell = "rm -rf html mkdocs *.html [a-z]*.md [a-z]*.txt" }
 clean_pycache = { shell = "find . -type f -name '*.py[co]' -delete -print -o -type d -name __pycache__ -delete -print" }
 clean_build = { shell = "rm -rf dist" }
@@ -66,6 +74,8 @@ coverage_report = { shell = "coverage report --show-missing" }
 coverage_annotate = { shell = "coverage annotate" }
 test = { composite = ["doctest", "pytest"] }
 
+pydoc_text = { shell = "python -m pydoc learn_toml | tee learn_toml.txt" }
+pydoc_html = { shell = "python -m pydoc -w learn_toml" }
 pdoc_html = { shell = "pdoc --html --force ." }
 mkdocs = { shell = "mkdocs new mkdocs && cd mkdocs && echo theme: readthedocs >> mkdocs.yml && yq --yaml-output . mkdocs.yml | sponge mkdocs.yml && mkdocs build" }
 doc = { composite = ["pydoc_text", "pydoc_html", "pdoc_html", "mkdocs"] }
@@ -113,3 +123,7 @@ line-length = 120
 profile = "black"
 line_length = 120
 skip_gitignore = true
+
+[project.scripts]
+learn_toml = "learn_toml.main:main"
+learn_yaml = "learn_yaml.main:main"
