--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,5 +125,6 @@ line_length = 120
 skip_gitignore = true
 
 [project.scripts]
+learn_rich = "learn_rich.main:main"
 learn_toml = "learn_toml.main:main"
 learn_yaml = "learn_yaml.main:main"
