ci: update bandit config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ ruff = { shell = "ruff check" }
 pylint = { shell = "pylint --ignore-patterns='_[a-z][a-z0-9_-]+.py' ./src ./tests" }
 pyright = { shell = "pyright --stats" }
 refurb = { shell = "refurb ./src ./tests" }
-bandit = { shell = "bandit --verbose --recursive ./src" }
+bandit = { shell = "bandit --verbose --recursive --config ./pyproject.toml ." }
 mypy = { shell = "mypy --install-types --non-interactive ./src ./tests" }
 lint = { composite = ["ruff", "pyright", "pylint", "refurb", "mypy"] }
 
@@ -125,6 +125,12 @@ line-length = 120
 profile = "black"
 line_length = 120
 skip_gitignore = true
+
+[tool.bandit]
+exclude_dirs = [".venv"]
+
+[tool.bandit.assert_used]
+skips = ["*/*_test.py", "*/test_*.py"]
 
 [project.scripts]
 learn_rich = "learn_rich.main:main"
