ci: add end of full run marker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,9 @@ pdoc_html = { shell = "pdoc --html --force ." }
 mkdocs = { shell = "mkdocs new mkdocs && cd mkdocs && echo theme: readthedocs >> mkdocs.yml && yq --yaml-output . mkdocs.yml | sponge mkdocs.yml && mkdocs build" }
 doc = { composite = ["pydoc_text", "pydoc_html", "mkdocs"] }
 
-full = { composite = ["clean", "format", "lint", "test", "doc"] }
+end = { shell = 'printf "\nFinished running pdm run full\n\n"' }
+
+full = { composite = ["clean", "format", "lint", "test", "doc", "end"] }
 
 [tool.pyright]
 include = ["src", "tests"]
