--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,11 +76,11 @@ coverage_report = { shell = "coverage report --show-missing" }
 coverage_annotate = { shell = "coverage annotate" }
 test = { composite = ["doctest", "pytest"] }
 
-pydoc_text = { shell = "python -m pydoc learn_toml | tee learn_toml.txt" }
-pydoc_html = { shell = "python -m pydoc -w learn_toml" }
-pdoc_html = { shell = "pdoc --html --force ." }
+pydoc_text = { shell = "mkdir pydoc; for d in $(ls src/); do python -m pydoc ${d} | tee ./pydoc/${d}.txt; done" }
+pydoc_html = { shell = "mkdir pydoc; for d in $(ls src/); do python -m pydoc -w ${d}; mv ${d}.html ./pydoc; done" }
+pdoc_html = { shell = "PYTHONPATH=src pdoc --html --force ." }
 mkdocs = { shell = "mkdocs new mkdocs && cd mkdocs && echo theme: readthedocs >> mkdocs.yml && yq --yaml-output . mkdocs.yml | sponge mkdocs.yml && mkdocs build" }
-doc = { composite = ["pydoc_text", "pydoc_html", "mkdocs"] }
+doc = { composite = ["pydoc_text", "pydoc_html", "pdoc_text", "mkdocs"] }
 
 end = { shell = 'printf "\nFinished running pdm run full\n\n"' }
 
