--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ maintainers = [
 dependencies = [
     "rich>=13.7.0",
     "pyyaml>=6.0.1",
+    "ruyaml>=0.91.0",
+    "yamlfix>=1.16.0",
+    "yamllint>=1.35.1",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
