--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "ruyaml>=0.91.0",
     "yamlfix>=1.16.0",
     "yamllint>=1.35.1",
+    "toml>=0.10.2",
+    "tomli>=2.0.1",
+    "tomlkit>=0.12.4",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
