--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,19 @@ dependencies = [
     "toml>=0.10.2",
     "tomli>=2.0.1",
     "tomlkit>=0.12.4",
+    "fastjsonschema>=2.19.1",
+    "json5>=0.9.17",
+    "jsonlint>=0.1",
+    "jsonpickle>=3.0.3",
+    "jsonpointer>=2.4",
+    "jsonschema>=4.21.1",
+    "jsonschema-lint>=0.1.0",
+    "jsonschema-specifications>=2023.12.1",
+    "orjson>=3.9.15",
+    "python-json-logger>=2.0.7",
+    "python-lsp-jsonrpc>=1.1.2",
+    "types-jsonschema>=4.21.0.20240118",
+    "ujson>=5.9.0",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
