--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "python-lsp-jsonrpc>=1.1.2",
     "types-jsonschema>=4.21.0.20240118",
     "ujson>=5.9.0",
+    "starlette>=0.37.2",
+    "uvicorn>=0.29.0",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
@@ -73,6 +75,9 @@ toml_main = { call = "learn_toml:main" }
 toml_module = { shell = "python -m learn_toml" }
 yaml_main = { call = "learn_yaml:main" }
 yaml_module = { shell = "python -m learn_yaml" }
+asgi_main = { call = "learn_asgi:main" }
+asgi_module = { shell = "python -m learn_asgi" }
+asgi_server = { call = "learn_asgi:main" }
 
 clean_docs = { shell = "rm -rf html mkdocs pydoc pdoc" }
 clean_pycache = { shell = "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete" }
@@ -157,3 +162,4 @@ skips = ["*/*_test.py", "*/test_*.py"]
 learn_rich = "learn_rich.main:main"
 learn_toml = "learn_toml.main:main"
 learn_yaml = "learn_yaml.main:main"
+learn_asgi_server = "learn_asgi.main:main"
