--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,7 +125,7 @@ toml_module = { shell = "python -m learn_toml" }
 yaml_main = { call = "learn_yaml:main" }
 yaml_module = { shell = "python -m learn_yaml" }
 asgi_server = { call = "learn_asgi:server" }
-asgi_client = { shell = "pdm run python src/learn_asgi/client.py" }
+asgi_client = { call = "learn_asgi:client" }
 asgi_module = { shell = "python -m learn_asgi" }
 
 clean_docs = { shell = "rm -rf html mkdocs pydoc pdoc" }
