--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ dependencies = [
     "uvicorn>=0.29.0",
     "asyncio>=3.4.3",
     "httpx>=0.27.0",
+    "psycopg>=3.1.18",
+    "pymongo>=4.7.0",
+    "testcontainers>=4.4.0",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
