--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "psycopg>=3.1.18",
     "pymongo>=4.7.0",
     "testcontainers>=4.4.0",
+    "icecream>=2.1.3",
 ]
 requires-python = ">=3.12"
 dynamic = ["version"]
