learn_asyncio: add project entry-point, run commands and fix main

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,8 @@ asgi_client = { call = "learn_asgi:client" }
 asgi_module = { shell = "python -m learn_asgi" }
 enum_main = { call = "learn_enum:main" }
 enum_module = { shell = "python -m learn_enum" }
+asyncio_main = { call = "learn_asyncio:main" }
+asyncio_module = { shell = "python -m learn_asyncio" }
 
 clean_docs = { shell = "rm -rf html mkdocs pydoc pdoc" }
 clean_pycache = { shell = "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete" }
@@ -180,3 +182,4 @@ learn_yaml = "learn_yaml.main:main"
 learn_asgi_server = "learn_asgi.server:main"
 learn_asgi_client = "learn_asgi.client:main"
 learn_enum = "learn_enum.main:main"
+learn_asyncio = "learn_asyncio.main:main"
